activity_form2b_pretest.xml AddedQuestionIds and Removed inputTypeDecimal

--- a/app/src/main/res/layout/activity_f1_section04.xml
+++ b/app/src/main/res/layout/activity_f1_section04.xml
@@ -561,6 +561,40 @@
                     </RadioGroup>
 
 
+                    <!--RS445-->
+                    <RadioGroup
+                        android:id="@+id/RS445"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="3dp"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:layout_weight="2"
+                            android:background="@color/white"
+                            android:gravity="center"
+                            android:text="@string/RS445"
+                            android:textColor="@color/colorPrimary" />
+
+                        <RadioButton
+                            android:id="@+id/RS445a"
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:text="@string/yes" />
+
+                        <RadioButton
+                            android:id="@+id/RS445b"
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:text="@string/no" />
+
+                    </RadioGroup>
+
+
                     <!--RS4496-->
                     <RadioGroup
                         android:id="@+id/RS4496"
